--- a/GoPiGo/Base.lproj/Main.storyboard
+++ b/GoPiGo/Base.lproj/Main.storyboard
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RYd-A3-dHL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RYd-A3-dHL">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -39,22 +42,24 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7RK-4m-Le3">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cjs-ad-G3M" customClass="SKView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" red="1" green="0.80408775430000001" blue="0.2425209546" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="7RK-4m-Le3" firstAttribute="top" secondItem="Cjs-ad-G3M" secondAttribute="top" id="05a-OG-dZd"/>
-                            <constraint firstItem="7RK-4m-Le3" firstAttribute="trailing" secondItem="Cjs-ad-G3M" secondAttribute="trailing" id="20X-4n-HVY"/>
-                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="top" secondItem="q5G-yN-mVj" secondAttribute="bottom" id="3Nf-ff-8xr"/>
-                            <constraint firstItem="7RK-4m-Le3" firstAttribute="leading" secondItem="Cjs-ad-G3M" secondAttribute="leading" id="6mF-Fi-72b"/>
-                            <constraint firstItem="7RK-4m-Le3" firstAttribute="bottom" secondItem="fXk-Ag-4gp" secondAttribute="top" id="8uk-sM-VRf"/>
-                            <constraint firstAttribute="trailing" secondItem="Cjs-ad-G3M" secondAttribute="trailing" id="KZq-Zq-q9o"/>
-                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="bottom" secondItem="fXk-Ag-4gp" secondAttribute="top" id="lLi-Ld-Dqz"/>
-                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="leading" secondItem="PH3-WB-TqN" secondAttribute="leading" id="oIg-hM-adT"/>
+                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="trailing" secondItem="7RK-4m-Le3" secondAttribute="trailing" id="0Uk-ec-vSm"/>
+                            <constraint firstItem="7RK-4m-Le3" firstAttribute="leading" secondItem="PH3-WB-TqN" secondAttribute="leading" id="J6U-bK-F3v"/>
+                            <constraint firstItem="7RK-4m-Le3" firstAttribute="top" secondItem="q5G-yN-mVj" secondAttribute="bottom" id="L35-xu-ptt"/>
+                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="bottom" secondItem="fXk-Ag-4gp" secondAttribute="top" id="VjS-qG-FSw"/>
+                            <constraint firstItem="7RK-4m-Le3" firstAttribute="bottom" secondItem="fXk-Ag-4gp" secondAttribute="top" id="gHl-TT-bST"/>
+                            <constraint firstAttribute="trailing" secondItem="7RK-4m-Le3" secondAttribute="trailing" id="mir-BA-ylg"/>
+                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="leading" secondItem="7RK-4m-Le3" secondAttribute="leading" id="uFc-gV-CXy"/>
+                            <constraint firstItem="Cjs-ad-G3M" firstAttribute="top" secondItem="PH3-WB-TqN" secondAttribute="top" id="xAA-tL-WJM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Camera" id="0UQ-Uh-441"/>
@@ -65,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5p6-jU-Z4B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="957.60000000000002" y="-520.38980509745136"/>
+            <point key="canvasLocation" x="956" y="-521.28935532233891"/>
         </scene>
         <!--Test-->
         <scene sceneID="3ui-8j-6Mu">
@@ -80,6 +85,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="69F-Px-rT8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
@@ -109,8 +115,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="fg6-nB-zcs" kind="relationship" relationship="viewControllers" id="ob5-H9-m3t"/>
                         <segue destination="oO9-Vh-J6C" kind="relationship" relationship="viewControllers" id="2fL-R7-F1m"/>
+                        <segue destination="fg6-nB-zcs" kind="relationship" relationship="viewControllers" id="ob5-H9-m3t"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aLd-pF-nGj" userLabel="First Responder" sceneMemberID="firstResponder"/>
